php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #46067 Collator methods - Segfault
Submitted: 2008-09-12 17:27 UTC Modified: 2008-09-20 22:07 UTC
From: felipe@php.net Assigned:
Status: Closed Package: I18N and L10N related
PHP Version: 6CVS-2008-09-12 (CVS) OS:
Private report: No CVE-ID: None
 [2008-09-12 17:27 UTC] felipe@php.net
Description:
------------
The crashes happens when creating an instance of Collator passing no argument.

Reproduce code:
---------------
<?php

$x = new collator;
$x->getStrength();

Expected result:
----------------
Warning: Collator::__construct() expects exactly 1 parameter, 0 given in /home/felipe/public_html/bug.php on line 4
Segmentation fault (core dumped)



Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2008-09-20 22:07 UTC] felipe@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sun Sep 20 22:00:01 2026 UTC