- Fixed bug #46067 (Collator methods - Segfault)